# CarTouchScreenMiniDisplay_ESP32S3

./: .gitignore  CMakeLists.txt  README.md  TODO.md  ZEPHYR_IMPLEMENTATION_CHANGES.md  ZEPHYR_NEXT_STEPS.md  partitions.csv  sdkconfig  sdkconfig.defaults
Designs/: PajeroIconOrigin.txt
SquarelineProject/: CarTouchScreenMiniDisplay.sll  CarTouchScreenMiniDisplay.slp  CarTouchScreenMiniDisplay.spj  CarTouchScreenMiniDisplay_events.py  project.info
SquarelineProject/components/: SoftwarUpdate.ecomp
SquarelineProject/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h
SquarelineProject/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.h  ui_comp_softwarupdate.c
SquarelineProject/ui/images/: ui_img_540754542.c  ui_img_555283202.c  ui_img_rollpajero2_png.c  ui_img_rollpajero2_zip_png.c  ui_img_rollreduced_png.c
SquarelineProject/ui/screens/: ui_Inclinometer.c  ui_Inclinometer.h  ui_InclinometerGraph.c  ui_InclinometerGraph.h  ui_InclinometerNew.c  ui_InclinometerNew.h  ui_MainConfigScreen.c  ui_MainConfigScreen.h  ui_ManualWifi.h  ui_MemoryEraseValidation.c  ui_OTAUpdate.c  ui_OTAUpdate.h  ui_Options.c  ui_Options.h  ui_Temperature.c  ui_Temperature.h  ui_Wifi.c  ui_Wifi.h
components/Diagnostics/: CMakeLists.txt  Diagnostics.cpp  Diagnostics.hpp  diag_os.h
components/OTAUpdater/: CMakeLists.txt  OTAUpdater.cpp  OTAUpdater.hpp  ota_os.h
components/PipelineTypes/include/: PipelineTypes.hpp
components/SensorLib/src/: SensorLib.h  TouchDrvCST92xx.cpp
components/System/: CMakeLists.txt  System.cpp  System.hpp  system_os.h
components/WifiManager/: CMakeLists.txt  WifiManager.cpp  WifiManager.hpp  wifi_os.h
components/display/: CMakeLists.txt  display.cpp  display.hpp  display_os.h
components/esp_lcd_sh8601/include/: esp_lcd_sh8601.h
components/i2cHandler/: CMakeLists.txt  i2cHandler.cpp  i2cHandler.hpp
components/os_abstraction/: CMakeLists.txt  freertos_backend.cpp  os_primitives.h
components/qmi8658cInterface/: CMakeLists.txt  qmi8658cInterface.cpp  qmi8658cInterface.hpp  qmi_os.h
components/rollsandpitch/include/: rollsandpitch.hpp
components/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
components/ui/components/: ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_softwarupdate.c  ui_comp_softwarupdate.h
components/ui/images/: ui_img_555283202.c  ui_img_rollpajero2_reduced_png.c  ui_img_rollpajero2_zip_png.c  ui_img_scale_revamp_png.c
components/ui/screens/: ui_Inclinometer.c  ui_Inclinometer.h  ui_InclinometerGraph.c  ui_InclinometerGraph.h  ui_InclinometerNew.c  ui_InclinometerNew.h  ui_MainConfigScreen.c  ui_MainConfigScreen.h  ui_ManualWifi.c  ui_MemoryEraseValidation.c  ui_MemoryEraseValidation.h  ui_OTAUpdate.c  ui_Temperature.h  ui_Wifi.c  ui_Wifi.h
main/: CMakeLists.txt  idf_component.yml  main.cpp
tools/: poll_diag_logs.py
