idf_component_register(
    SRCS
        "ui.c"
        "ui_helpers.c"
		"components/ui_comp_softwarupdate.c"
		"components/ui_comp.c"
        "components/ui_comp_hook.c"
        "screens/ui_InclinometerGraph.c"
		"screens/ui_Inclinometer.c"
		"screens/ui_InclinometerNew.c"
		"screens/ui_MainConfigScreen.c"
		"screens/ui_MemoryEraseValidation.c"
		"screens/ui_Wifi.c"
		"screens/ui_ManualWifi.c"
		"screens/ui_OTAUpdate.c"
		"images/ui_img_rollpajero2_reduced_png.c"
		"images/ui_img_rollreduced_png.c"
        "fonts/ui_font_Nabla_Big.c"
        "fonts/ui_font_HeadingDegree.c"
        "fonts/ui_font_SmallerEmblemaOne.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        lvgl
)